# rust-rag-api

./: Cargo.toml  DEPENDENCIES.md  LICENSE  README.md
src/: api.rs  config.rs  generation.rs  ingestion.rs  main.rs  retrieval.rs  types.rs  utils.rs
