[package]
name = "rust-rag-api"
version = "0.1.1-alpha"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
mongodb = "3.2.5"
serde = { version = "1.0.219", features = ["derive"] }
twox-hash = "2.1.1"
uuid = { version = "1.18.0", features = ["v4"] }
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
dotenv = "0.15.0"
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
anyhow = "1.0.99"
hf-hub = "0.4.3"
tokenizers = "0.22.0"
serde_json = "1.0.143"
candle-nn = "0.9.1"
tracing-subscriber = "0.3.19"
