[package]
name = "rust-rag-api"
version = "0.2.1-alpha"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
mongodb = { version = "3.2.5", features = ["zstd-compression"] }
serde = { version = "1.0.219", features = ["derive"] }
twox-hash = "2.1.1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
dotenv = "0.15.0"
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
anyhow = "1.0.99"
hf-hub = "0.4.3"
tokenizers = "0.22.0"
serde_json = "1.0.143"
candle-nn = "0.9.1"
tracing-subscriber = "0.3.19"
regex = "1.11.2"
rayon = "1.11.0"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
